[project]
name = "multiviewedit"
version = "0.1.0"
description = "multi video edit for trimming and syncing multiple videos at the same time."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "av>=15.0.0",
    "pyside6>=6.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"



[project.scripts]
mve = "multiviewedit:mve"

